# yandex-music-downloader

./: LICENSE  MIGRATION.md  README.md  main.py  pyproject.toml  requirements.txt
ymd/: __init__.py  __main__.py  api.py  cli.py  core.py  http_utils.py  mime_utils.py
ymd/cli/: __init__.py  filename_regexps.py  logger.py  main.py  old_main.py
ymd/cli/options/: download.py  file_managing.py  help_panels.py  metadata.py  network.py
ymd/domain/: __init__.py  core.py
ymd/music_api/: __init__.py  download_track.py  file_format.py  mime_guesser.py  request_signing.py
ymd/music_api/downloader/: decrypt.py  downloader.py
ymd/music_api/track_info/: fetch.py  get_track_info.py  get_track_info_params.py
ymd/ym_api/: api.py  models.py
